--- a/WolfPeopleKill/WolfPeopleKill.csproj
+++ b/WolfPeopleKill/WolfPeopleKill.csproj
@@ -3,12 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>5981ed15-509b-4166-bd9c-758b475abef9</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/a6a31324-73e8-48fe-9d5a-d7054e9cf60b/resourcegroups/WolfPeopleKill/providers/Microsoft.Insights/components/WolfPeopleKill</ApplicationInsightsResourceId>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>..\WolfPeopleKill\WolfPeopleKill.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.13.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
