--- a/WolfPeopleKill/WolfPeopleKill.csproj
+++ b/WolfPeopleKill/WolfPeopleKill.csproj
@@ -9,6 +9,8 @@
     <DocumentationFile>..\WolfPeopleKill\WolfPeopleKill.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.13.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
