--- a/WolfPeopleKill/appsettings.json
+++ b/WolfPeopleKill/appsettings.json
@@ -7,7 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "WerewolfkillConnection": "data source=werewolfkill.database.windows.net;initial catalog=Werewolfkill;persist security info=True;user id=Werewolfkill;password=Wolfpeoplekill_2020;MultipleActiveResultSets=True;"
-  }
+  //"ConnectionStrings": {
+  //  "WerewolfkillConnection": "data source=werewolfkill.database.windows.net;initial catalog=Werewolfkill;persist security info=True;user id=Werewolfkill;password=Wolfpeoplekill_2020;MultipleActiveResultSets=True;"
+  //}
+  "AzureAppConfiguration": {
+    "ConnectionString": "[WerewolfkillConnection]"
+  } 
 }
