--- a/WolfPeopleKill/appsettings.json
+++ b/WolfPeopleKill/appsettings.json
@@ -6,11 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
   //"ConnectionStrings": {
   //  "WerewolfkillConnection": "data source=werewolfkill.database.windows.net;initial catalog=Werewolfkill;persist security info=True;user id=Werewolfkill;password=Wolfpeoplekill_2020;MultipleActiveResultSets=True;"
   //}
-  "AzureAppConfiguration": {
-    "ConnectionString": "[WerewolfkillConnection]"
+  
   } 
 }
