--- a/WolfPeopleKill/appsettings.json
+++ b/WolfPeopleKill/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,6 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "WerewolfkillConnection": "data source=werewolfkill.database.windows.net;initial catalog=Werewolfkill;persist security info=True;user id=Werewolfkill;password=Wolfpeoplekill_2020;MultipleActiveResultSets=True;"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "d3ce6ca5-174f-426d-868d-deeb88b6cad2"
   }
-
 }
