--- a/WolfPeopleKill/appsettings.json
+++ b/WolfPeopleKill/appsettings.json
@@ -7,6 +7,13 @@
     }
   },
   "AllowedHosts": "*",
+  "tokenManagement": {
+    "secret": "123456123456123456",
+    "issuer": "webapi.wolfpeoplekill",
+    "audience": "WebApi",
+    "accessExpiration": 30,
+    "refreshExpiration": 60
+  },
 
   "ApplicationInsights": {
     "InstrumentationKey": "d3ce6ca5-174f-426d-868d-deeb88b6cad2"
